:bomb: Fixed bug when currency isn't visible when apps aren't selected

--- a/saas_apps/static/src/css/calculator.css
+++ b/saas_apps/static/src/css/calculator.css
@@ -4,8 +4,11 @@
 }
 
 #price{
-    font-size: 32px;
     display: inline;
+}
+
+.pricing-card-title{
+    font-size: 32px;
 }
 
 .users-qty-change-buttons{
